# discord-speech-to-text-bot

./: .gitignore  Cargo.toml  privacy.md  readme.md  terms.md
.cargo/: config.toml
src/: ehandler.rs  main.rs
src/stt/: mod.rs
